dada_tests/validate/duplicate_func_class/compiler-output.ref
Error: already have a function named `test`
   ╭─[dada_tests/validate/duplicate_func_class.dada:2:7]
   │
 1 │ fn test() {}
   ·    ──┬─  
   ·      ╰─── the function is here
 2 │ class test()
   ·       ──┬─  
   ·         ╰─── ignoring this class for now
───╯
